--- to do
focal for multi-layer objects
support for RasterQuad (4 dimensional) objects
add equivalent to "subsWithNA" to reclassify
move resample (bilenear interp. (and add other options)) and rasterize/(lines, polygons) to C

--- development version
blockSize made safer for resample with cluster (thanks to Stefan Schlaffer)
'timer' works again (thanks to Stefan Schlaffer)
subsetting a brick to a single layer now returns a RasterLayer (unless drop=FALSE), which is consistent with the behavior or a RasterStack (suggested by Jon Olav Skoien)
Fixed error occurring when creating a RasterStack from several ncdf files using a 'varname' argument. Problem reported by Greg

--- 7-November-2012, version 2.0-29
new function 'select' for selecting spatial subsets by drawing on plot (map)
new function 'barplot' for RasterLayer objects
new function 'scale' for Raster* objects (suggested by Agustin Lobo)
new functions to coerce to and from big.matrix objects: as(x, 'big.matrix') and raster(x) or brick(x)
new implementation of aggregate that is _much_ faster with fun= min, max, mean or sum
raster now uses 'igraph' instead of 'igraph0' (functions gridDistance and clump)
renamed function 'compare' to 'compareRaster' (to avoid name hiding by the igraph package)
renamed function 'expand' to 'extend' (to avoid name hiding by the Matrix package)
functions setOptions, showOptions, saveOptions, and clearOptions have been replaced by new function "rasterOptions"
incorporated function 'count' into 'freq' (via the 'value' argument) and 'count' now gives a warning and will be removed in the future (to avoid name hiding of count by the plyr package which is used by rgeos)
new argument 'alignOnly' to projectRaster